--- a/web/templates/dashboard-ranking.html
+++ b/web/templates/dashboard-ranking.html
@@ -235,6 +235,7 @@
                     </a></li>
                     <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
                     {% if user.user_type == 4 %}
+                    <li><i class="fas fa-users"></i><a href="/manageCandidate/">Manage Candidate</a></li>
                     <li><i class="fas fa-users"></i><a href="/manageEmployers/">Manage Employer</a></li>
                     <li><i class="fas fa-briefcase"></i><a href="/manageCompanies/">Manage Company</a></li>
                     {% endif %}
