--- a/web/templates/dashboard-admin-matching-control.html
+++ b/web/templates/dashboard-admin-matching-control.html
@@ -165,9 +165,18 @@
                     </div>
                     <div class="progress-body">
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow={% if request.user.is_email_confirmed %} "100" {% else %} "70" {% endif %} aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
                       </div>
-                      <p class="progress-to">70%</p>
+                      {% if request.user.user_type == 4 %}
+<p class="progress-to">100%</p>
+{% else %}
+{% if request.user.is_email_confirmed %}
+<p class="progress-to">100%</p>
+{% else %}
+<p class="progress-to">70%</p>
+<p> Please confirm your email </p>
+{% endif %} 
+{% endif %}
                     </div>
                   </div>
                 </div>
@@ -178,7 +187,9 @@
                     <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
                     <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
                     <li class="active"><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
-                    <li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
+                    {% if request.user.user_type == 4 or request.user.user_type == 2 %}
+<li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
+{% endif %}
                     <li><i class="fas fa-comment"></i><a href="employer-dashboard-message.html">Message</a></li>
                     <li><i class="fas fa-calculator"></i><a href="employer-dashboard-pricing.html">Pricing Plans</a></li>
                   </ul>
