--- a/web/templates/dashboard-ranking-candidate.html
+++ b/web/templates/dashboard-ranking-candidate.html
@@ -168,15 +168,11 @@
                 </div>
               </div>
               <div class="dashboard-sidebar">
-                <div class="company-info">
-                  <div class="thumb">
-                    <img src="dashboard/#" class="img-fluid" alt="">
-                  </div>
+
                   <div class="company-body">
-                    <h5>Degoin</h5>
-                    <span>@username</span>
+                    <h5>{{request.user.preferredName}} {{request.user.firstName}} {{request.user.lastName}}</h5>
+                    <span>{{request.user.email}}</span>
                   </div>
-                </div>
                 <div class="profile-progress">
                   <div class="progress-item">
                     <div class="progress-head">
@@ -184,9 +180,18 @@
                     </div>
                     <div class="progress-body">
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow={% if request.user.is_email_confirmed %} "100" {% else %} "70" {% endif %} aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
                       </div>
-                      <p class="progress-to">70%</p>
+                      {% if request.user.user_type == 4 %}
+<p class="progress-to">100%</p>
+{% else %}
+{% if request.user.is_email_confirmed %}
+<p class="progress-to">100%</p>
+{% else %}
+<p class="progress-to">70%</p>
+<p> Please confirm your email </p>
+{% endif %} 
+{% endif %}
                     </div>
                   </div>
                 </div>
@@ -214,7 +219,9 @@
                     <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
                     {% endif %}
                     <li><i class="fas fa-plus-square"></i><a href="/viewMatch">View Match</a></li>
-                    <li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
+                    {% if request.user.user_type == 4 or request.user.user_type == 2 %}
+<li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
+{% endif %}
                   </ul>
                   <ul class="delete">
                     {% if user.user_type == 4 %}
