--- a/web/templates/employer-dashboard-post-job.html
+++ b/web/templates/employer-dashboard-post-job.html
@@ -411,15 +411,11 @@
                 </form>
               </div>
               <div class="dashboard-sidebar">
-                <div class="company-info">
-                  <div class="thumb">
-                    <img src="dashboard/#" class="img-fluid" alt="">
-                  </div>
+
                   <div class="company-body">
-                    <h5>Degoin</h5>
-                    <span>@username</span>
+                    <h5>{{request.user.preferredName}} {{request.user.firstName}} {{request.user.lastName}}</h5>
+                    <span>{{request.user.email}}</span>
                   </div>
-                </div>
                 <div class="profile-progress">
                   <div class="progress-item">
                     <div class="progress-head">
@@ -427,26 +423,49 @@
                     </div>
                     <div class="progress-body">
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow={% if request.user.is_email_confirmed %} "100" {% else %} "70" {% endif %} aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
                       </div>
+                      {% if request.user.user_type == 4 %}
+                      <p class="progress-to">100%</p>
+                      {% else %}
+                      {% if request.user.is_email_confirmed %}
+                      <p class="progress-to">100%</p>
+                      {% else %}
                       <p class="progress-to">70%</p>
+                      <p> Please confirm your email </p>
+                      {% endif %} 
+                      {% endif %}
                     </div>
                   </div>
                 </div>
                 <div class="dashboard-menu">
                   <ul>
-                    <li><i class="fas fa-home"></i><a href="employer-dashboard.html">Dashboard</a></li>
                     <li><i class="fas fa-user"></i><a href="/edit-profile">Edit Profile</a></li>
-                    <li><i class="fas fa-briefcase"></i><a href="/manageJobs">Manage Jobs</a></li>
-                    <li><i class="fas fa-users"></i><a href="employer-dashboard-manage-candidate.html">Manage Candidates</a></li>
-                    <li><i class="fas fa-heart"></i><a href="#">Shortlisted Resumes</a></li>
+                    {% if user.user_type == 4 %}
+                    <li><i class="fas fa-users"></i><a href="/manageCandidate/">Manage Candidate</a></li>
+                    <li><i class="fas fa-users"></i><a href="/manageEmployers/">Manage Employer</a></li>
+                    <li><i class="fas fa-briefcase"></i><a href="/manageCompanies/">Manage Company</a></li>
+                    {% endif %}
+                    {% if user.user_type != 1 %}
+                    <li><i class="fas fa-briefcase"></i><a href="/manageJobs/">Manage Jobs</a></li>
+                    {% endif %}
+                    <li><i class="fas fa-users"></i><a href="/jobApplications/">Applications</a></li>
+                    {% if user.user_type != 1 %}
+                    <li><i class="fas fa-heart"></i><a href="/employerRanking">Interview Ranking</a></li>
+                    {% else %}
+                    <li><i class="fas fa-heart"></i><a href="/candidateRanking">Interview Ranking</a></li>
+                    {% endif %}
+                    {% if user.user_type == 4 %}
+                    <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
+                    {% endif %}
+                    <li><i class="fas fa-plus-square"></i><a href="/viewMatch">View Match</a></li>
                     <li class="active"><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
-                    <li><i class="fas fa-comment"></i><a href="employer-dashboard-message.html">Message</a></li>
-                    <li><i class="fas fa-calculator"></i><a href="employer-dashboard-pricing.html">Pricing Plans</a></li>
                   </ul>
                   <ul class="delete">
+                    {% if user.user_type == 4 %}
+                    <li><i class="fas fa-power-off"></i><a href="/">Add New Admin</a></li>
+                    {% endif %}
                     <li><i class="fas fa-power-off"></i><a href="/logout">Logout</a></li>
-                    <li><i class="fas fa-trash-alt"></i><a href="#" data-toggle="modal" data-target="#modal-delete">Delete Profile</a></li>
                   </ul>
                   <!-- Modal -->
                   <div class="modal fade modal-delete" id="modal-delete" tabindex="-1" role="dialog" aria-hidden="true">
