adding announcements part 1

--- a/web/templates/dashboard-manage-company.html
+++ b/web/templates/dashboard-manage-company.html
@@ -128,10 +128,8 @@
               <div class="dashboard-content-wrapper">
                 <div class="manage-candidate-container">
                   <br>
-                  <input type="submit" value="Sort Chronologically">
-                  <input type="submit" value="Sort Alphabetically">
-                  <input type="submit" value="Approved Only">
-                  <input type="submit" value="Not Approved Only">
+                  <a class="button" href="/manageCompanies/&chronological=True">Sort: Chronologically</a>
+                  <a class="button" href="/manageCompanies/&alphabetical=True"> Alphabetically</a>
                   <table class="table">
                     <thead>
                       <tr>
