--- a/web/templates/dashboard-manage-applications.html
+++ b/web/templates/dashboard-manage-applications.html
@@ -107,6 +107,29 @@
         <div class="row">
           <div class="col-md-6">
             <div class="breadcrumb-area">
+              {% if announcements %}
+                <div class="testimonial-quote">
+                    <img src={% static "images/testimonial/quote.png" %} class="img-fluid" alt="">
+                    <h4> Important announcement: </h4>
+                    <br>
+                </div>
+                
+              {% endif %}
+              {% for annoncement in announcements %}
+                <div class="container">
+                    <div class="testimonial">
+                      <div class="testimonial-for">
+                      
+                      <div class="testimonial-item">
+                        <p>{{annoncement.title|safe}}</p>
+                        <p>{{annoncement.description|safe}}</p>
+                        <h5>{{annoncement.author}} @ Concordia ACE Staff</h5>
+                      </div>
+                      
+                    </div>
+                  </div>
+              </div>
+            {% endfor %}
               
               <h1>{% if user.user_type == 1%} Candidate {% elif user.user_type  == 2 %} Employer {% else %} Admin {% endif %}Dashboard</h1>
               <nav aria-label="breadcrumb">
