Added create new admin

--- a/web/templates/dashboard-ranking.html
+++ b/web/templates/dashboard-ranking.html
@@ -263,7 +263,7 @@
                   </ul>
                   <ul class="delete">
                     {% if user.user_type == 4 %}
-                    <li><i class="fas fa-power-off"></i><a href="/">Add New Admin</a></li>
+                    <li><i class="fas fa-power-off"></i><a href="/createNewAdmin">Add New Admin</a></li>
                     {% endif %}
                     <li><i class="fas fa-power-off"></i><a href="/logout">Logout</a></li>
                   </ul>
