--- a/web/templates/dashboard-manage-candidates.html
+++ b/web/templates/dashboard-manage-candidates.html
@@ -275,18 +275,9 @@
                     </div>
                     <div class="progress-body">
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow={% if request.user.is_email_confirmed %} "100" {% else %} "70" {% endif %} aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 0;"></div>
                       </div>
-                      {% if request.user.user_type == 4 %}
-<p class="progress-to">100%</p>
-{% else %}
-{% if request.user.is_email_confirmed %}
-<p class="progress-to">100%</p>
-{% else %}
-<p class="progress-to">70%</p>
-<p> Please confirm your email </p>
-{% endif %} 
-{% endif %}
+                      <p class="progress-to">70%</p>
                     </div>
                   </div>
                 </div>
@@ -318,13 +309,11 @@
                     <li><i class="fas fa-plus-square"></i><a href="/matchDay">Admin Matchday</a></li>
                     {% endif %}
                     <li><i class="fas fa-plus-square"></i><a href="/viewMatch">View Match</a></li>
-                    {% if request.user.user_type == 4 or request.user.user_type == 2 %}
-<li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
-{% endif %}
+                    <li><i class="fas fa-plus-square"></i><a href="/employer-dashboard-post-job">Post New Job</a></li>
                   </ul>
                   <ul class="delete">
                     {% if user.user_type == 4 %}
-                    <li><i class="fas fa-power-off"></i><a href="/">Add New Admin</a></li>
+                    <li><i class="fas fa-power-off"></i><a href="/createNewAdmin">Add New Admin</a></li>
                     {% endif %}
                     <li><i class="fas fa-power-off"></i><a href="/logout">Logout</a></li>
                   </ul>
